--- a/src/sass/global/_setting.scss
+++ b/src/sass/global/_setting.scss
@@ -13,7 +13,7 @@ $padding-sp: 20px;
 // フォント設定
 ////////////////////
 
-$base-font-family: "";
+$base-font-family: "Gotu", "Noto Sans JP", "Noto serif JP", ;
 $second-font-family: "";
 // ※検証ツールでしっかり反映されているか確認する
 
@@ -31,5 +31,10 @@ $bold: 700;
 ////////////////////
 
 //色指定（共通性のあるものは出来る限り指定すると良い）
-$black: #111;
+$black: #000;
+$black2: #0D2936;
 $white: #fff;
+$green: #408F95;
+$green2: #DDF0F1;
+$green3: #1C595E;
+$red: #C94800;
