--- a/src/sass/module/_button.scss
+++ b/src/sass/module/_button.scss
@@ -16,77 +16,77 @@
 }
 
 
-// .button {
-// 	display: flex;
-//   justify-content: space-between;
-// 	text-align: center;
-// 	text-decoration: none;
-// 	position: relative;
-// 	width: 202px;
-// 	margin: auto;
-// 	padding: 1rem 4rem;
-// 	color: $white;
-// 	transition: 0.3s ease-in-out;
-//   background-color: $green;
-//   font-size: 14px;
-//   line-height: calc(22/14);
-// }
-
-// .button::before {
-//   content: '';
-//   position: absolute;
-//   top: 4px;
-//   left: 4px;
-//   border: 0.0625rem solid $green;
-//   width: inherit;
-//   height: 100%;
-// }
-
-// .button::after {
-// 	content: '';
-// 	position: absolute;
-// 	top: 50%;
-// 	right: 1em;
-// 	transform: translateY(-50%);
-// 	width: 40px;
-// 	height: 1px;
-// 	background-color: $white;
-// }
-
 .button {
 	display: flex;
   justify-content: space-between;
-  align-items: center;
 	text-align: center;
 	text-decoration: none;
+	position: relative;
 	width: 202px;
 	margin: auto;
-	padding: 1rem 2rem;
-	// font-weight: bold;
-	background: $green;
+	padding: 1rem 4rem;
 	color: $white;
-	// border-radius: 100vh;
-	position: relative;
-	transition: 0.5s;
-  box-shadow: 5px 5px #27acd9;
+	transition: 0.3s ease-in-out;
+  background-color: $green;
+  font-size: 14px;
+  line-height: calc(22/14);
 }
+
 .button::before {
-	content: '';
-	position: absolute;
-	top: calc(50% - 2px);
-	right: 1em;
-	transform: translateY(calc(-50% - 2px)) rotate(45deg);
-	width: 10px;
-	height: 1px;
-	background: $white;
+  content: '';
+  position: absolute;
+  top: 4px;
+  left: 4px;
+  border: 0.0625rem solid $green;
+  width: inherit;
+  height: 100%;
 }
+
 .button::after {
 	content: '';
 	position: absolute;
 	top: 50%;
 	right: 1em;
 	transform: translateY(-50%);
-	width: 50px;
+	width: 40px;
 	height: 1px;
 	background-color: $white;
 }
+
+// .button {
+// 	display: flex;
+//   justify-content: space-between;
+//   align-items: center;
+// 	text-align: center;
+// 	text-decoration: none;
+// 	width: 202px;
+// 	margin: auto;
+// 	padding: 1rem 2rem;
+// 	// font-weight: bold;
+// 	background: $green;
+// 	color: $white;
+// 	// border-radius: 100vh;
+// 	position: relative;
+// 	transition: 0.5s;
+//   box-shadow: 5px 5px #27acd9;
+// }
+// .button::before {
+// 	content: '';
+// 	position: absolute;
+// 	top: calc(50% - 2px);
+// 	right: 1em;
+// 	transform: translateY(calc(-50% - 2px)) rotate(45deg);
+// 	width: 10px;
+// 	height: 1px;
+// 	background: $white;
+// }
+// .button::after {
+// 	content: '';
+// 	position: absolute;
+// 	top: 50%;
+// 	right: 1em;
+// 	transform: translateY(-50%);
+// 	width: 50px;
+// 	height: 1px;
+// 	background-color: $white;
+// }
