--- a/src/sass/module/_button.scss
+++ b/src/sass/module/_button.scss
@@ -1,20 +1,5 @@
 @use "global" as *;
 
-// .button-layout {
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-//   // margin-top: 19px;
-//   text-decoration: none;
-//   outline: none;
-//   /*アニメーションの指定*/
-//   transition: all .3s;
-
-//   @include mq("md") {
-//     padding-bottom: 120px;
-//   }
-// }
-
 .button {
   display: flex;
   justify-content: space-between;
@@ -32,7 +17,6 @@
 	// transition: width 0.3s ease-in-out, background-color 0.3s ease-in-out;
 	transform-origin: left top;
 	height: rem(54);
-	// transform: scale(0, 1);
 }
 
 .button::before {
@@ -44,8 +28,6 @@
   width: rem(206);
   height: rem(54);
   z-index: -1;
-  // transition: width 0.3s ease-in-out, background-color 0.3s ease-in-out;
-	// transition: width 0.2s ease-out, background-color 0.2s ease-out; /* より速いアニメーション */
 }
 
 .button:hover::after {
@@ -76,7 +58,6 @@
   top: 50.5%;
   right: rem(10);
   width: rem(7);
-  // height: 7px;
   margin-top: -4px;
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
@@ -90,8 +71,6 @@
   @include mq("md") {
     margin-right: rem(32);
     width: rem(9);
-    // height: 9px;
-    // top: 52%;
   }
 }
 
@@ -102,14 +81,10 @@
 }
 
 
-
-
-
 .button:hover::before {
-  // width: 100%;
   background-color: $white;
-	top: 3px;
-	left: 3px;
+	top: rem(3);
+	left: rem(3);
 }
 
 .button:hover {
