--- a/src/sass/page/_header__link.scss
+++ b/src/sass/page/_header__link.scss
@@ -8,8 +8,8 @@
   color: $white;
   font-size: rem(10);
   font-weight: $regular;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: rem(20);
+  padding-right: rem(20);
   height: inherit;
   align-items: center;
   white-space: nowrap;
