--- a/src/sass/page/_drawer-menu.scss
+++ b/src/sass/page/_drawer-menu.scss
@@ -11,8 +11,8 @@
   display: none;
   width: 100%;
   height: 100vh;
-  background-color: $black2;
-  opacity: 0.9;
+  background-color: $green;
+  // opacity: 0.9;
   overflow-y: scroll;
-  padding: 170px 0;
+  // padding: 170px 0;
 }
