--- a/src/sass/module/_button2.scss
+++ b/src/sass/module/_button2.scss
@@ -13,10 +13,13 @@
   background-color: $green;
   font-size: rem(14);
   line-height: calc(22/14);
+	// transition: .2s cubic-bezier(0.45, 0, 0.55, 1), background-color 0.3s ease;
   transition: .2s cubic-bezier(0.45, 0, 0.55, 1);
-	// transition: width 0.3s ease-in-out, background-color 0.3s ease-in-out;
 	transform-origin: left top;
 	height: rem(54);
+  overflow: visible;
+  z-index: 1;
+  border: rem(1) solid $green;
 }
 
 .button::before {
@@ -28,29 +31,39 @@
   width: rem(206);
   height: rem(54);
   z-index: -1;
+  overflow: visible;
 }
+
+.button::after {
+  background: $white;
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: '';
+  width: 100%;
+  height: 100%;
+  transform: scale(0, 1);
+  transform-origin: left top;
+  transition: .2s cubic-bezier(0.45, 0, 0.55, 1);
+  z-index: -1;
+  overflow: hidden;
+}
+
+.button:hover {
+  color: $green;
+  // background-color: $white;
+  border: 0.0625rem solid $green;
+}
+
 
 .button:hover::after {
   transform: scale(1, 1);
 }
 
-.button:hover span {
-	color: $white; /* span要素内のテキストカラーを白に変更 */
-}
-
-.button::after {
-	content: '';
-	position: absolute;
-	top: 50%;
-	right: 2.72rem;
-	transform: translateY(-50%);
-	width: rem(40);
-	height: rem(1);
-	background-color: $white;
-}
-
-.button:hover::after {
-	background-color: $green;
+.button:hover .button-arrow,
+.button:hover .button-arrow2 {
+  border-color: $green;
+  background-color: $green; /* 背景色を$greenに変更 */
 }
 
 .button-arrow {
@@ -74,23 +87,13 @@
   }
 }
 
-.button:hover .button-arrow {
-  border-right: rem(1) solid $green;
-  border-top: rem(1) solid $green;
-
+.button-arrow2 {
+  content: '';
+	position: absolute;
+	top: 50%;
+	right: 2.72rem;
+	transform: translateY(-50%);
+	width: rem(40);
+	height: rem(1);
+	background-color: $white;
 }
-
-
-.button:hover::before {
-  background-color: $white;
-	top: rem(3);
-	left: rem(3);
-}
-
-.button:hover {
-  color: $green;
-  background-color: $white;
-  border: 0.0625rem solid $green;
-}
-
-
