--- a/src/sass/page/_header__item.scss
+++ b/src/sass/page/_header__item.scss
@@ -1,10 +1,27 @@
 @use "global" as *;
 
-// .header__item:not(:first-child){
-//   margin-left: 40px;
-// }
+
 .header__item {
   height: inherit;
+  color: $white;
 }
 
+.header__item a:hover{
+  color: $white;
+}
 
+.header__item a::after {
+  content: '';
+  /*絶対配置で線の位置を決める*/
+  position: absolute;
+  bottom: rem(15);
+  left: 10%;
+  /*線の形状*/
+  width: 80%;
+  height: rem(1);
+  background: $white;
+  /*アニメーションの指定*/
+  transition: all .3s;
+  transform: scale(0, 1);/*X方向0、Y方向1*/
+  transform-origin: center top;/*上部中央基点*/
+}
