--- a/src/sass/page/_hamberger.scss
+++ b/src/sass/page/_hamberger.scss
@@ -19,19 +19,19 @@
 .hamburger-layout::before {
     content: "";
     position: absolute;
-    top: -10px; /* 適切なサイズを設定 */
-    bottom: -10px; /* 適切なサイズを設定 */
-    left: -10px; /* 適切なサイズを設定 */
-    right: -10px; /* 適切なサイズを設定 */
+    top: rem(-10); /* 適切なサイズを設定 */
+    bottom: rem(-10); /* 適切なサイズを設定 */
+    left: rem(-10); /* 適切なサイズを設定 */
+    right: rem(-10); /* 適切なサイズを設定 */
 }
 
 .hamburger-layout::after {
   content: "";
   position: absolute;
-  top: -10px; /* 適切なサイズを設定 */
-  bottom: -10px; /* 適切なサイズを設定 */
-  left: -10px; /* 適切なサイズを設定 */
-  right: -10px; /* 適切なサイズを設定 */
+  top: rem(-10); /* 適切なサイズを設定 */
+  bottom: rem(-10); /* 適切なサイズを設定 */
+  left: rem(-10); /* 適切なサイズを設定 */
+  right: rem(-10); /* 適切なサイズを設定 */
 }
 
 .hamburger span {
@@ -39,7 +39,7 @@
   left: 0;
   display: inline-block;
   width: 100%;
-  height: 2px;
+  height: rem(1);
   background-color: $white;
   transition: 0.3s transform 0.3s background-color;
   -webkit-transition: 0.3s ease-in-out;
