--- a/src/sass/page/_header__inner.scss
+++ b/src/sass/page/_header__inner.scss
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   height: rem(80);
-  padding-left: rem(6);
+  // padding-left: rem(6);
   border-bottom: rem(1) solid $black;
   justify-content: space-between;
   padding-right: rem(20);
@@ -14,6 +14,6 @@
     padding-left: 0;
     margin-right: 0;
     border-bottom: none;
-    padding-right: rem(15);
+    // padding-right: rem(15);
   }
 }
