--- a/src/sass/page/_hamberger.scss
+++ b/src/sass/page/_hamberger.scss
@@ -5,7 +5,7 @@
   z-index: 9999;
   top: 29px;
   right: 15px;
-  width: 25px;
+  width: 32px;
   height: 16px;
   cursor: pointer;
 }
@@ -52,16 +52,16 @@
 }
 
 .hamburger span:nth-child(1) {
-  top: 0;
+  top: rem(-2);
 }
 
 .hamburger span:nth-child(2) {
-  top: 8px;
+  top: rem(10);
   transition: 0.3s opacity;
 }
 
 .hamburger span:nth-child(3) {
-  top: 16px;
+  top: rem(22);
 }
 
 .hamburger.is-active span:nth-child(1) {
