ドロワー修正

--- a/src/sass/page/_drawer-menu__item-text.scss
+++ b/src/sass/page/_drawer-menu__item-text.scss
@@ -1,8 +1,8 @@
 @use "global" as *;
 
-// .drawer-menu__item-text {
-//   padding-top: 12px;
-//   padding-bottom: 12px;
-//   color: $white;
-//   vertical-align: middle;
-// }
+.drawer-menu__item-text {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  color: $white;
+  vertical-align: middle;
+}
