--- a/src/sass/page/_drawer-menu__link.scss
+++ b/src/sass/page/_drawer-menu__link.scss
@@ -2,13 +2,11 @@
 
 .drawer-menu__link {
   width: 100%;
-  justify-content: center;
+  // justify-content: center;
   font-size: 18px;
-  font-weight: $medium;
   text-align: center;
   color: $white;
   display: flex;
-  font-family: Cormorant;
   padding-top: 23px;
   padding-bottom: 22px;
 }
