--- a/src/sass/page/_drawer-menu__item.scss
+++ b/src/sass/page/_drawer-menu__item.scss
@@ -8,13 +8,14 @@
 }
 
 
-.drawer-menu__item::before {
-  content: '';
-  width: 18px;/*画像の幅*/
-  height: 18px;/*画像の高さ*/
-  background-image: url(../images/drawer-logo.svg);
-  background-size: contain;
-  top: 24px;
-  left: -21px;
-  position: absolute;
-}
+
+// .drawer-menu__item::before {
+//   content: '';
+//   width: 18px;/*画像の幅*/
+//   height: 18px;/*画像の高さ*/
+//   background-image: url(../images/drawer-logo.svg);
+//   background-size: contain;
+//   top: 13px;
+//   left: -21px;
+//   position: absolute;
+// }
