--- a/src/sass/page/_drawer__logo-text.scss
+++ b/src/sass/page/_drawer__logo-text.scss
@@ -4,6 +4,6 @@
   font-size: rem(16);
   color: $white;
   font-weight: $bold;
-  // margin-left: 4px;
-  // vertical-align: middle;
+  text-align: left;
+  line-height: 1.125;
 }
