--- a/src/sass/page/_drawer-menu__link.scss
+++ b/src/sass/page/_drawer-menu__link.scss
@@ -1,12 +1,58 @@
 @use "global" as *;
 
-.drawer-menu__link {
+.drawer-menu__link-a {
   width: 100%;
   // justify-content: center;
-  font-size: 18px;
+  font-size: 16px;
   text-align: center;
   color: $white;
   display: flex;
-  padding-top: 23px;
-  padding-bottom: 22px;
+  padding-top: 12px;
+  padding-bottom: 10px;
 }
+
+.drawer-menu__link-b {
+  width: 100%;
+  // justify-content: center;
+  font-size: 16px;
+  text-align: center;
+  color: $white;
+  display: flex;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  margin-top: 18px;
+}
+
+.drawer-menu__link-a::before {
+  content: '';
+  width: 18px;/*画像の幅*/
+  height: 18px;/*画像の高さ*/
+  background-image: url(../images/drawer-logo.svg);
+  background-size: contain;
+  top: 11px;
+  left: -22px;
+  position: absolute;
+}
+
+.drawer-menu__link-b::before {
+  content: '';
+  width: 18px;/*画像の幅*/
+  height: 18px;/*画像の高さ*/
+  background-image: url(../images/drawer-logo.svg);
+  background-size: contain;
+  top: 27px;
+  left: -21px;
+  position: absolute;
+}
+
+// .drawer-menu__link-c {
+//   width: 100%;
+//   // justify-content: center;
+//   font-size: 16px;
+//   text-align: center;
+//   color: $white;
+//   display: flex;
+//   padding-top: 12px;
+//   padding-bottom: 12px;
+//   margin-top: 18px;
+// }
