--- a/src/sass/page/_drawer-menu__container.scss
+++ b/src/sass/page/_drawer-menu__container.scss
@@ -1,13 +1,16 @@
 @use "global" as *;
 
-// .drawer-menu__inner-left {
-//   // margin-left: 23px;
-//   // max-width: 166px;
-//   width: 100%;
-// }
-
 .drawer-menu__container {
   display: flex;
   justify-content: center;
-  align-items: center;
+}
+
+.drawer-menu__container-left,
+.drawer-menu__container-right {
+  width: 50%;
+  max-width: rem(200); /* 必要に応じて適切な幅を指定してください */
+}
+
+.drawer-menu__item-text {
+  white-space: nowrap; /* テキストを折り返さないようにする */
 }
