--- a/src/sass/page/_drawer-menu__inner.scss
+++ b/src/sass/page/_drawer-menu__inner.scss
@@ -1,8 +1,8 @@
 @use "global" as *;
 
 .drawer-menu__inner {
-padding-left: 14px;
-padding-right: 14px;
+padding-left: rem(15);
+padding-right: rem(15);
 margin-left: auto;
 margin-right: auto;
 margin-right: auto;
