--- a/src/sass/page/_drawer-menu__items.scss
+++ b/src/sass/page/_drawer-menu__items.scss
@@ -1,17 +1,15 @@
 @use "global" as *;
 
 .drawer-menu__items-a {
-  max-width: 167px;
+  max-width: rem(166);
   width: 100%;
-  padding-left: 23px;
-  // padding-top: 13px;
-  margin-top: 15px;
+  padding-left: rem(22);
+  margin-top: rem(15);
 }
 
 .drawer-menu__items-b {
-  max-width: 167px;
+  max-width: rem(166);
   width: 100%;
-  padding-left: 23px;
-  // padding-top: 13px;
-  margin-top: 16px;
+  padding-left: rem(22);
+  margin-top: rem(16);
 }
