--- a/src/sass/page/_hamberger.scss
+++ b/src/sass/page/_hamberger.scss
@@ -3,16 +3,16 @@
 .hamburger {
   position: fixed;
   z-index: 9999;
-  top: 29px;
-  right: 15px;
-  width: 32px;
-  height: 16px;
+  top: rem(29);
+  right: rem(15);
+  width: rem(32);
+  height: rem(16);
   cursor: pointer;
 }
 
 .hamburger.is-active {
   top: rem(28);
-  right: rem(10);
+  right: rem(14);
   width: rem(40);
 }
 
