--- a/src/sass/page/_header__inner.scss
+++ b/src/sass/page/_header__inner.scss
@@ -11,7 +11,7 @@
 
   @include mq("md") {
     height: rem(90);
-    padding-left: 0;
+    padding-left: 25px;
     margin-right: 0;
     border-bottom: none;
     // padding-right: rem(15);
