u-追加とrem変更

--- a/src/sass/page/_mv.scss
+++ b/src/sass/page/_mv.scss
@@ -5,110 +5,9 @@
   position: relative;
   z-index: 1;
   height: 100vh;
-  min-height: 400px;
-}
-
-.mv__slider,
-.mv__slider .swiper-img,
-.mv__slider .swiper-img img {
-    height: inherit;
-    min-height: inherit;
-}
-
-.mv__slider .swiper-img img {
-    width: 100%;
-    object-fit: cover;
-}
-
-.mv__title-wrap {
-  position: absolute;
-  z-index: 10;
-  top: 49.8%;
-  left: 49.7%;
-  transform: translate(-50%, -50%); /* 画面中央に配置 */
-
+  min-height: rem(320);
 
   @include mq("md") {
-    width: 100%;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
- }
-}
-
-.mv__sub-title {
-  font-size: 40px;
-  // font-weight: $bold;
-  // line-height: 1;
-  letter-spacing: 0.51em;
-  color: $white;
-  text-align: center;
-  text-indent: 1.4rem;
-
-  @include mq("md") {
-    font-size: 80px;
-    text-align: center;
-    text-indent: 2.6rem;
-  }
-}
-
-.mv__text {
-  margin-top: -6px;
-  color: $white;
-  font-size: 18px;
-  letter-spacing: 0.05em;
-  // line-height: 2;
-  text-align: center;
-
-  @include mq("md") {
-    margin-top: -18px;
-  }
-
-  // @include mq("md") {
-  //   display: none;
-  // }
-
-}
-
-.mv__text-sp {
-  display: none;
-
-  @include mq("md") {
-    display: block;
-    margin-top: 54px;
-    color: $white;
-    font-size: 27px;
-    text-align: center;
-
-  }
-}
-
-
-/* 画像サイズ調整 */
-.swiper-slide img {
-  height: 100vh;
-  width: 100%;
-}
-
-/* PC用画像 */
-.pc-img {
-  display: block; /* PC用画像はデフォルトで表示 */
-}
-
-/* SP用画像 */
-.sp-img {
-  display: none; /* SP用画像はデフォルトで非表示 */
-}
-
-/* スマートフォン向けのメディアクエリ */
-@media screen and (max-width: 768px) {
-  /* PC用画像はスマートフォンでは非表示 */
-  .pc-img {
-    display: none;
-  }
-
-  /* SP用画像はスマートフォンで表示 */
-  .sp-img {
-    display: block;
+    min-height: rem(400);
   }
 }
