--- a/src/sass/page/_campaign.scss
+++ b/src/sass/page/_campaign.scss
@@ -36,7 +36,7 @@
 //   max-width: 100%; /* 画像の幅を親要素に合わせて変更します */
 // }
 
-.campaign__cards {
+.campaign-slider-wrapper {
   display: grid;
   margin-top: 10px;
     grid-template-columns: repeat(4, 1fr);
