--- a/src/sass/page/_campaign.scss
+++ b/src/sass/page/_campaign.scss
@@ -49,44 +49,52 @@
 
   .campaign-slider-slide {
     display: block; /* inline-block から block に変更 */
-    box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.35);
+    // box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.35);
     margin-bottom: 10px; /* 下側のマージンを追加 */
     // margin-right: 10px; /* 右側のマージンを追加 */
-    margin-left: 10px;
+    margin-left: 1px;
     min-width: 280px;
+    margin-top: 17px;
   }
 
 .campaign-card__item {
   display: inline-block;
-  // min-width: 280px;
-  max-width: 100%;
+  max-width: 280px;
+  width: 100%;
   // box-shadow: 3px 3px 8px 0px rgba(0, 0, 0, 0.06);
-  box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.35);
+  // box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.35);
+  box-shadow: 3px 3px 4px 0px rgba(29, 29, 29, 0.75);
+
 }
 
 .card-text__title {
   font-size: 12px;
   color: $green;
   border: 1px solid $green;
-  padding: 10px 12px;
+  padding: 7px 12px 3.5px 12px;
   max-width: 108px;
   white-space: nowrap;
   // padding-top: 16px;
 }
 
 .card-text__title-sub {
-  margin-top: 4px;
+  margin-top: 7px;
 }
 
 .text-line {
   background-color: $green; /* 横線の色 */
   content: "";
-  height: 1px; /* 横線の高さ */
+  height: 1.5px; /* 横線の高さ */
+  margin-top: 4px;
   flex-grow: 1;
 }
 
 .card__body {
-  padding: 16px 16px 24px 16px;
+  padding: 15px 17px 13px 15px;
+}
+
+.card-price {
+  margin-top: 11px;
 }
 
 .card-price__text {
@@ -99,13 +107,10 @@
 .card-price-box {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: baseline;
+  margin-top: 2px;
 }
 
-.card-price__old {
-  font-size: 20px;
-  font-weight: $bold;
-}
 
 .card-price__new {
   font-size: 32px;
@@ -115,6 +120,8 @@
 }
 
 .card-price__old-strike-through {
+  font-size: 20px;
+  font-weight: $bold;
   text-decoration: line-through; /* 打ち消し線を設定します */
   text-decoration-color: $red; /* 打ち消し線の色を赤色に設定します */
 }
