キャンペーンのピクパ

--- a/src/sass/global/_setting.scss
+++ b/src/sass/global/_setting.scss
@@ -13,7 +13,7 @@ $padding-sp: 20px;
 // フォント設定
 ////////////////////
 
-$base-font-family: "Gotu", "Noto Sans JP", "Noto serif JP", ;
+$base-font-family: "Gotu", "Lato", "Noto Sans JP", "Noto serif JP", ;
 $second-font-family: "";
 // ※検証ツールでしっかり反映されているか確認する
 
@@ -24,6 +24,7 @@ body {
 // フォントウェイト
 $regular: 300;
 $normal: 400;
+$medium: 500;
 $bold: 700;
 
 ////////////////////
