--- a/src/sass/page/_mv__title-sub.scss
+++ b/src/sass/page/_mv__title-sub.scss
@@ -4,10 +4,12 @@
   font-size: rem(40);
   // font-weight: $bold;
   // line-height: 1;
-  letter-spacing: 0.51em;
+  letter-spacing: 0.52em;
   color: $white;
   text-align: center;
   text-indent: 1.4rem;
+  font-family: Lato;
+  font-weight: $medium;
 
   @include mq("md") {
     font-size: 80px;
