--- a/src/sass/page/_campaign__inner.scss
+++ b/src/sass/page/_campaign__inner.scss
@@ -1,10 +1,10 @@
 @use "global" as *;
 
 .campaign__inner {
-  padding-top: 38px;
+  padding-top: rem(38);
 }
 
 .campaign__inner.inner {
   padding-right: 0;
-  padding-left: 15px;
+  padding-left: rem(13);
 }
