--- a/src/sass/page/_about-us.scss
+++ b/src/sass/page/_about-us.scss
@@ -28,10 +28,18 @@
   // left: 10%;
   // max-width: 128px;
   display: block;
+
+  @include mq("md") {
+    top: -14%;
+  }
 }
 
 .about-us__img {
   position: relative;
   // display: inline-block;
   margin-top: 52px;
+
+  @include mq("md") {
+    margin-top: 120px;
+  }
 }
