--- a/src/sass/page/_campaign.scss
+++ b/src/sass/page/_campaign.scss
@@ -34,6 +34,10 @@
 
 .campaign.section-title {
   text-indent: -0.9rem;
+
+  @include mq("md") {
+    text-indent: -2rem;
+  }
 }
 
 // .campaign-card__img img {
@@ -49,6 +53,11 @@
   gap: rem(24);
   margin-right: calc(50% - 50vw);
   width: 100vh;
+
+  @include mq("md") {
+    margin-top: rem(20);
+    gap: rem(40);
+  }
 }
 
   .campaign-slider-slide {
@@ -59,6 +68,10 @@
     margin-left: rem(1);
     min-width: rem(280);
     margin-top: rem(17);
+
+    @include mq("md") {
+      min-width: rem(334);
+    }
   }
 
 .campaign-card__item {
@@ -69,6 +82,9 @@
   // box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.35);
   box-shadow: rem(3) rem(3) rem(4) rem(0) rgba(29, 29, 29, 0.75);
 
+  @include mq("md") {
+    max-width: rem(334);
+  }
 }
 
 .card-text__title {
@@ -79,6 +95,12 @@
   max-width: rem(108);
   white-space: nowrap;
   // padding-top: 16px;
+
+  @include mq("md") {
+    padding: rem(7) 20px rem(3.5) 20px;
+  max-width: 117px;
+
+  }
 }
 
 .card-text__title-sub {
@@ -92,6 +114,11 @@
   height: rem(1.5); /* 横線の高さ */
   margin-top: rem(4);
   flex-grow: 1;
+
+  @include mq("md") {
+    height: rem(1);
+    margin-top: rem(7);
+  }
 }
 
 .card__body {
@@ -99,6 +126,13 @@
   padding-right: rem(17);
   padding-bottom: rem(13);
   padding-left: rem(15);
+
+  @include mq("md") {
+    padding-top: rem(24);
+    padding-right: rem(17);
+    padding-bottom: rem(40);
+    padding-left: rem(17);
+  }
 }
 
 .card-price {
