--- a/src/sass/page/_campaign__inner.scss
+++ b/src/sass/page/_campaign__inner.scss
@@ -2,9 +2,17 @@
 
 .campaign__inner {
   padding-top: rem(38);
+
+  @include mq("md") {
+    padding-top: rem(113);
+  }
 }
 
 .campaign__inner.inner {
   padding-right: 0;
   padding-left: rem(13);
+
+  @include mq("md") {
+    padding-left: rem(25);
+  }
 }
