--- a/src/sass/page/_mv__text.scss
+++ b/src/sass/page/_mv__text.scss
@@ -6,9 +6,11 @@
   font-size: rem(18);
   letter-spacing: 0.05em;
   text-align: center;
+  font-weight: $regular;
+  font-family: Gotu;
 
   @include mq("md") {
-    margin-top: rem(-18);
+    margin-top: rem(-8);
   }
 }
 
