--- a/src/sass/page/_mv__title-sub.scss
+++ b/src/sass/page/_mv__title-sub.scss
@@ -9,11 +9,12 @@
   text-align: center;
   text-indent: 1.4rem;
   font-family: Lato;
-  font-weight: $medium;
+  font-weight: $regular;
 
   @include mq("md") {
     font-size: 80px;
     text-align: center;
     text-indent: 2.6rem;
+    letter-spacing: 0.53em;
   }
 }
