アバウトアス修正

--- a/src/sass/page/_campaign.scss
+++ b/src/sass/page/_campaign.scss
@@ -44,9 +44,9 @@
 //   max-width: 100%; /* 画像の幅を親要素に合わせて変更します */
 // }
 
-.campaign-slider {
-  overflow: visible;
-}
+  // .campaign-slider {
+  //   overflow: visible;
+  // }
 
 .campaign-slider-wrapper {
   display: grid;
