--- a/src/sass/page/_about-us__inner.scss
+++ b/src/sass/page/_about-us__inner.scss
@@ -8,7 +8,7 @@ margin-right: auto;
 padding-top: rem(81);
 
 @include mq("md") {
-  padding-top: rem(130);
+  padding-top: 133px;
   padding-left: 25px;
   padding-right: 25px;
 }
