--- a/src/sass/page/_about-us__inner.scss
+++ b/src/sass/page/_about-us__inner.scss
@@ -6,12 +6,12 @@ padding-right: rem(15);
 margin-left: auto;
 margin-right: auto;
 padding-top: rem(81);
-padding-bottom: rem(70);
+padding-bottom: rem(74);
 
 @include mq("md") {
   padding-top: rem(133);
   padding-left: rem(25);
   padding-right: rem(25);
-  padding-bottom: rem(74);
+  padding-bottom: 0;
 }
 }
