--- a/src/sass/page/_campaign.scss
+++ b/src/sass/page/_campaign.scss
@@ -35,34 +35,42 @@
 .campaign.section-title {
   text-indent: -0.9rem;
 
-  @include mq("md") {
-    text-indent: -2rem;
-  }
+  // @include mq("md") {
+  //   text-indent: -2rem;
+  // }
 }
 
 // .campaign-card__img img {
 //   max-width: 100%; /* 画像の幅を親要素に合わせて変更します */
 // }
 
-  // .campaign-slider {
-  //   overflow: visible;
-  // }
+  .campaign-slider {
+    box-sizing: content-box;
+    // padding-right: calc(50% - 50vw);
+    padding-right: calc((100vw - 100%) / 2);
+    width: 100%;
+    margin-top: 10px;
 
-.campaign-slider-wrapper {
-  display: grid;
-  margin-top: rem(10);
-    grid-template-columns: repeat(4, 1fr);
-  // grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-  row-gap: rem(50);
-  gap: rem(24);
-  margin-right: calc(50% - 50vw);
-  width: 100vh;
-
-  @include mq("md") {
-    margin-top: rem(20);
-    gap: rem(35.5);
+    // @include mq("md") {
+    //   padding-right: calc((100vw - 100%) / 2);
+    // }
   }
-}
+
+// .campaign-slider-wrapper {
+//   // display: grid;
+//   margin-top: rem(10);
+//   // grid-template-columns: repeat(4, 1fr);
+//   // grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+//   // row-gap: rem(50);
+//   // gap: rem(24);
+//   margin-right: calc(50% - 50vw);
+//   width: 100vh;
+
+//   @include mq("md") {
+//     margin-top: rem(20);
+//     // gap: rem(35.5);
+//   }
+// }
 
   .campaign-slider-slide {
     display: block; /* inline-block から block に変更 */
@@ -79,15 +87,16 @@
   }
 
 .campaign-card__item {
-  display: inline-block;
-  max-width: rem(280);
+  // display: inline-block;
+  display: block;
+  // max-width: rem(280);
   width: 100%;
   // box-shadow: 3px 3px 8px 0px rgba(0, 0, 0, 0.06);
   // box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.35);
   box-shadow: rem(3) rem(3) rem(4) rem(0) rgba(29, 29, 29, 0.75);
 
   @include mq("md") {
-    max-width: rem(334);
+    // max-width: rem(334);
   }
 }
 
@@ -101,7 +110,7 @@
   // padding-top: 16px;
 
   @include mq("md") {
-    padding: rem(7) 20px rem(3.5) 20px;
+  padding: rem(7) 20px rem(3.5) 20px;
   max-width: 117px;
 
   }
@@ -172,4 +181,76 @@
   text-decoration: line-through; /* 打ち消し線を設定します */
   text-decoration-color: $red; /* 打ち消し線の色を赤色に設定します */
   text-decoration-thickness: rem(3); /* 打ち消し線の太さを2pxに設定します */
+}
+
+// /* 前へ次への矢印カスタマイズ */
+// .swiper-button-prev,
+// .swiper-button-next {
+//   display: none;
+
+//   @include mq("md") {
+//     position: absolute;
+//     display: block;
+//     height: 80px;
+//     width: 80px;
+//   }
+// }
+// /* 前へ次への矢印カスタマイズ */
+// .swiper-button-prev::after,
+// .swiper-button-next::after {
+
+//   @include mq("md") {
+//     background-repeat: no-repeat;
+//     background-size: contain;
+//     content: "";
+//     height: 34px;
+//     margin: auto;
+//     width: 34px;
+//   }
+
+// }
+// /* 前への矢印カスタマイズ */
+// .swiper-button-prev::after {
+//   background-image: url(./assets/images/arrow1.svg);
+// }
+// /* 次への矢印カスタマイズ */
+// .swiper-button-next::after {
+//   background-image: url(./assets/images/arrow2.svg);
+// }
+
+/* 前へ次への矢印カスタマイズ */
+.swiper-button-prev,
+.swiper-button-next {
+  position: absolute;
+  display: none; /* 初期状態では非表示 */
+}
+
+@include mq("md") {
+  .swiper-button-prev,
+  .swiper-button-next {
+    display: block; /* md メディアクエリの場合に表示 */
+    height: 80px;
+    width: 80px;
+  }
+}
+
+/* 矢印の擬似要素カスタマイズ */
+.swiper-button-prev::after,
+.swiper-button-next::after {
+  background-repeat: no-repeat;
+  background-size: contain;
+  content: "";
+  height: 34px;
+  margin: auto;
+  width: 34px;
+}
+
+/* 前への矢印カスタマイズ */
+.swiper-button-prev::after {
+  background-image: url(./assets/images/arrow1.svg);
+}
+
+/* 次への矢印カスタマイズ */
+.swiper-button-next::after {
+  background-image: url(./assets/images/arrow2.svg);
 }
