--- a/src/sass/page/_information__inner.scss
+++ b/src/sass/page/_information__inner.scss
@@ -5,13 +5,14 @@ padding-left: rem(15);
 padding-right: rem(15);
 margin-left: auto;
 margin-right: auto;
-padding-top: rem(80);
-padding-bottom: rem(70);
+padding-top: rem(78);
+padding-bottom: rem(84);
 
 @include mq("md") {
-  padding-top: rem(100);
-  padding-left: rem(25);
+  padding-top: 90px;
+  padding-left: rem(23);
   padding-right: rem(25);
   padding-bottom: rem(74);
+  margin-top: -74px;
   }
 }
