--- a/src/sass/page/_about-us.scss
+++ b/src/sass/page/_about-us.scss
@@ -5,11 +5,15 @@
   overflow: visible;
 }
 
-.about-us__img::after {
-  content: url(./assets/images/about-us-logo.svg);
-  width: 194px;
-  position: absolute;
-  display: block;
-  aspect-ratio: 194/181;
-  object-fit: cover;
-}
+
+// .about-us::after {
+//   content: url(./assets/images/about-us-logo.svg);
+//   width: 194px;
+//   position: absolute;
+//   display: block;
+//   aspect-ratio: 194/181;
+//   object-fit: cover;
+//   bottom: 0;
+//   right: calc(50% - min(48%, 40rem));
+
+// }
