ブログpc追加

--- a/src/sass/page/_about-us.scss
+++ b/src/sass/page/_about-us.scss
@@ -7,7 +7,7 @@
 
 
 // .about-us::after {
-//   content: url(./assets/images/about-us-logo.svg);
+//   content: url(/assets/images/about-us-logo.svg);
 //   width: 194px;
 //   position: absolute;
 //   display: block;
