--- a/src/sass/page/_information.scss
+++ b/src/sass/page/_information.scss
@@ -5,9 +5,9 @@
   background-color: $green2;
 }
 
-.information.section-title {
-  text-indent: -0.4rem;
-}
+// .information.section-title {
+//   text-indent: -0.4rem;
+// }
 
 .information__text-line {
   background-color: $green; /* 横線の色 */
