--- a/src/sass/module/_section-title__main.scss
+++ b/src/sass/module/_section-title__main.scss
@@ -2,7 +2,7 @@
 
 .section-title__main {
   font-size: rem(32);
-  letter-spacing: 0.01em;
+  // letter-spacing: 0.01em;
   line-height: 1.4;
 
   @include mq("md") {
