--- a/src/sass/page/_about-us__inner.scss
+++ b/src/sass/page/_about-us__inner.scss
@@ -15,3 +15,26 @@ padding-bottom: rem(74);
   padding-bottom: 0;
 }
 }
+
+.about-us__inner {
+  position: relative;
+}
+
+// .about-us__inner::after {
+//   @include mq("md") {
+//     position: absolute;
+//     content: "";
+//   }
+// }
+
+.about-us__inner::after {
+  @include mq("md") {
+      position: absolute;
+      content: "";
+      background: url(/assets/images/about-us-logo.svg) center center / contain no-repeat;
+      width: rem(194);
+      height: rem(181);
+      bottom: rem(130);
+      right: calc(50% - min(48vw, rem(637)));
+  }
+}
