--- a/src/sass/module/_section-title__main-white.scss
+++ b/src/sass/module/_section-title__main-white.scss
@@ -1,16 +1,20 @@
 @use "global" as *;
 
 .section-title__main-white {
-  font-size: rem(32);
-  // letter-spacing: 0.01em;
-  line-height: 1.4;
-  color: $white;
-  // background-color: transparent;
 
-  @include mq("md") {
-    font-size: rem(40);
+    font-size: rem(32);
+    // letter-spacing: 0.01em;
+    line-height: 1.4;
+    color: $white;
+
+    @include mq("md") {
+      font-size: rem(40);
+    }
   }
-}
+  // font-size: rem(32);
+  // letter-spacing: 0.01em;
+
+  // background-color: transparent;
 
 // .section-title__main::first-letter {
 //   color: $green; /* 先頭の文字の色を変更 */
